--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ body{
 } 
 /*стилизацыя блока переключения (lи)*/    
 .ulFooter{
+	position: relative;
 	color: #4d4d4d;
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	padding: 10px 15px;
@@ -202,7 +203,23 @@ body{
 	width: 130px;
 }
 /*стилизацыя нижнего края рамки*/
-.footer::before{
+
+.footer{
+	display:none;
+	content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 50px;
+    overflow: hidden;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
+    0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2),
+    0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2); 	
+}
+
+
+.footer1::before{
 	content: '';
     position: absolute;
     right: 0;
