--- a/css/style.css
+++ b/css/style.css
@@ -1,233 +1,228 @@
 @import url(reset.css);
 
-body{
-	background: #f5f5f5;
-	
+body {
+  background: #f5f5f5;
 }
 /*стилизацыя основного блока*/
-.toDo{
-	-webkit-font-smoothing: antialiased;
-	cursor: default;
-	margin-top: 150px;
-	display: block;
-	width: 550px;
-	background: #fff;
-    margin-left: 400px;
-    position: relative;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+.toDo {
+  -webkit-font-smoothing: antialiased;
+  cursor: default;
+  margin-top: 150px;
+  display: block;
+  width: 550px;
+  background: #fff;
+  margin-left: 400px;
+  position: relative;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
-
-
 
 /*стилизацыя фонового лого (todos)*/
-.todos{ 
-	color: rgba(175, 47, 47, 0.15);
-	position: absolute;
-    top:-150px;
-	left:120px;
- }
-/*стилизацыя блока*/ 
-.header{
-	overflow: hidden;
-	padding-top: 10px;
-    color: #4d4d4d;
-    font: 100px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    line-height: 1.4em;
-    width: 100%;
-    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+.todos {
+  color: rgba(175, 47, 47, 0.15);
+  position: absolute;
+  top: -150px;
+  left: 120px;
+}
+/*стилизацыя блока*/
+.header {
+  overflow: hidden;
+  padding-top: 10px;
+  color: #4d4d4d;
+  font: 100px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+  width: 100%;
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 /*стилизацыя лого иконки header*/
-.logoImg{
-	margin-left: 7px;
-	width: 35px;
-	height: 35px;
-	background: url(../images/active.png);
-	float: left;
+.logoImg {
+  margin-left: 7px;
+  width: 35px;
+  height: 35px;
+  background: url(../images/active.png);
+  float: left;
 }
 /*смена стилизацыи лого иконки header*/
-.newlogoImg{
-	margin-left: 7px;
-	width: 35px;
-	height: 35px;
-	background: url(../images/activeSelect.png);
-	float: left;
+.newlogoImg {
+  margin-left: 7px;
+  width: 35px;
+  height: 35px;
+  background: url(../images/activeSelect.png);
+  float: left;
 }
 /*стилизацыя ввода контента*/
 .new-todo {
-	background: #fff;
-	width: 80%;
-	display:block;
-	position: relative;
-	margin-top: -16px;
-    padding: 16px 16px 16px 8px;
-    border: none;
-    float: left;
-    background: rgba(0, 0, 0, 0.003);
-    margin-left: 10px;
-    font-size: 24px;
-    font-family: inherit;
-    font-weight: inherit;
-    line-height: 1.4em;
-    border: 0;
-    outline: none;
-    color: inherit;
+  background: #fff;
+  width: 80%;
+  display: block;
+  position: relative;
+  margin-top: -16px;
+  padding: 16px 16px 16px 8px;
+  border: none;
+  float: left;
+  background: rgba(0, 0, 0, 0.003);
+  margin-left: 10px;
+  font-size: 24px;
+  font-family: inherit;
+  font-weight: inherit;
+  line-height: 1.4em;
+  border: 0;
+  outline: none;
+  color: inherit;
 }
-/*стилизацыя подсказки поля ввода*/ 
+/*стилизацыя подсказки поля ввода*/
 .new-todo::placeholder {
-	color:#d9d9d9;
-	font-style: italic;
-						
+  color: #d9d9d9;
+  font-style: italic;
 }
-
 
 /*стилизацыя блока вывода контент*/
-.elements{
-	padding-top:5px;
-	padding-bottom:5px;
-    color: #4d4d4d;
-	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 24px;
-	align-items: center;
-	display:flex;
-	justify-content: center;
-	width: 550px;
-	border-bottom: 1px solid #ededed;
-	overflow: auto;
+.businessCase {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: #4d4d4d;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 550px;
+  border-bottom: 1px solid #ededed;
+  overflow: auto;
 }
-/*ефект при наведении*/ 
-.elements:hover .del{
-	background: url(../images/del.png);
-	width: 35px;
-	height: 35px;
-	float: right;
-	transition: all 2s;
+/*ефект при наведении*/
+.businessCase:hover .del {
+  background: url(../images/del.png);
+  width: 35px;
+  height: 35px;
+  float: right;
+  transition: all 2s;
 }
+
 /*стилизацыя блока родителя для иконки */
-.logo{	
-	position: relative;
-	align-items: center;
-	display: block;
-	justify-content: center;
-	background: white;
-	width: 40px;
-	height: 40px;
-	float: left;	
+.logo {
+  position: relative;
+  align-items: center;
+  display: block;
+  justify-content: center;
+  background: white;
+  width: 40px;
+  height: 40px;
+  float: left;
 }
 
 /*стилизацыя контента*/
-.edit{
-	padding-left: 15px;
-	display:inline-block ;
-	padding-top: 9px;
-	padding-bottom: 10px;
-	width: 81%;
-	float: left;
-	background: white;
-	word-wrap: break-word;
+.businessCase .businessCaseContent {
+  padding-left: 15px;
+  display: inline-block;
+  padding-top: 9px;
+  padding-bottom: 10px;
+  width: 81%;
+  float: left;
+  background: white;
+  word-wrap: break-word;
+}
+.businessCase.completed .businessCaseContent {
+  text-decoration: line-through;
+  color: #d9d9d9;
+}
+/*стилизация иконки активности*/
+.businessCase .businessCaseLogoImg {
+  content: url(../images/todo.png);
+  width: 35px;
+  height: 35px;
+}
+
+.businessCase.completed .businessCaseLogoImg {
+  content: url(../images/ready.png);
 }
 /*стилизацыя иконки удаления*/
-.del{
-	display: block;
-	width: 35px;
-	height: 35px;
-	float: right;	
+.del {
+  display: block;
+  width: 35px;
+  height: 35px;
+  float: right;
 }
 /*after ефект при наведении на иконку удаления*/
-.del:hover:after{
-	content: '';
-	background: url(../images/nigthDel.png);
-	width: 35px;
-	height: 35px;
-	float: right;	
+.del:hover:after {
+  content: "";
+  background: url(../images/nigthDel.png);
+  width: 35px;
+  height: 35px;
+  float: right;
 }
 
-
-
-
-/*первый блок (footер)*/	
-.spanFooter{
-	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	line-height: 1.4em;
-	color: #4d4d4d;
-	float:left;
-	padding: 10px 15px;
-} 
-/*стилизацыя блока переключения (lи)*/    
-.ulFooter{
-	position: relative;
-	color: #4d4d4d;
-	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	padding: 10px 15px;
-	margin-right: 20px;
-	overflow: hidden;
-	display: block;
-	float:right;
-	width: 270px;
+/*первый блок (footер)*/
+.spanFooter {
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+  color: #4d4d4d;
+  float: left;
+  padding: 10px 15px;
+}
+/*стилизацыя блока переключения (lи)*/
+.footerTools {
+  position: relative;
+  color: #4d4d4d;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 10px 15px;
+  margin-right: 20px;
+  overflow: hidden;
+  display: block;
+  float: right;
+  width: 270px;
 }
 /*стилизацыя переключателей*/
-.borderActive{
-	position: relative;
-	margin-top: -3px;
-	padding: 3px 5px;
-	border-radius: 3px;
-	float:right;
-	border: 1px solid #777;
-	margin-left: 22px;
-	display: inline-block;
+.selected {
+  border: 1px solid #777;
 }
 /*стилизацыя переключателей*/
-.borderNone{
-	position: relative;
-	margin-top: -3px;
-	padding: 3px 5px;
-	border-radius: 3px;
-	float: right;
-	border: 1px solid #fff;
-	margin-left: 22px;
-	display: inline-block;
+.footerFilterButton {
+  position: relative;
+  margin-top: -3px;
+  padding: 3px 5px;
+  border-radius: 3px;
+  float: right;
+  border: 1px solid #fff;
+  margin-left: 22px;
+  display: inline-block;
+}
+.footerFilterButton.selected {
+  border: 1px solid #777;
 }
 /*кнопка сброса (complted)*/
-.inputFooter{
-	outline: 0 ;
-	position: relative;
-	box-sizing: border-box;
-	align-items: flex-start;
-    text-align: center;
-	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	line-height: 1.4em;
-	color: #4d4d4d;
-	float:right;
-	padding: 10px 15px;
-	border:0;
-	background: #fff;
-	width: 130px;
+.inputFooter {
+  outline: 0;
+  position: relative;
+  box-sizing: border-box;
+  align-items: flex-start;
+  text-align: center;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 1.4em;
+  color: #4d4d4d;
+  float: right;
+  padding: 10px 15px;
+  border: 0;
+  background: #fff;
+  width: 130px;
 }
 /*стилизацыя нижнего края рамки*/
 
-.footer{
-	display:none;
-	content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 50px;
-    overflow: hidden;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-    0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2),
-    0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2); 	
+.footer {
+  display: none;
 }
-
-
-.footer1::before{
-	content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 50px;
-    overflow: hidden;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-    0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2),
-    0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2); 
+.footer.active {
+  display: block;
+}
+.footer.active::before {
+  display: block;
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 50px;
+  overflow: hidden;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6,
+    0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6,
+    0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
